# school-project

./: pyproject.toml
escola/: settings.py  urls.py
src/core/: models.py  permissions.py
src/courses/: admin.py  apps.py  urls.py
src/courses/controllers/: __init__.py  course_controller.py  rating_controller.py
src/courses/migrations/: 0001_initial.py  0002_alter_course_deleted_at_alter_rating_deleted_at.py
src/courses/models/: __init__.py  course.py  rating.py
src/courses/serializers/: __init__.py  course_serializer.py  rating_serializer.py
src/courses/test/: get_tests.py
src/courses/tests/: delete_test.py  get_tests.py  post_tests.py  put_test.py  test_pytest.py
src/cursos/: apps.py  models.py
